--- a/clases/TPFAlvarezFreireSolar.Rmd
+++ b/clases/TPFAlvarezFreireSolar.Rmd
@@ -4,48 +4,82 @@ author: "Álvarez Nicolás, Freire Guido, Solar Facundo"
 date: "2023-12-08"
 output: html_document
 ---
+
 ```{r}
 library(tidyverse)
 library(readxl)
 library(caret)
 ```
 
+## Lectura de datos
+
+### (a)
+
+Leemos los datos y renombramos las columnas. Analizamos las primeras filas.
+
 ```{r}
 df <- read_excel('body.xls', col_names = FALSE)
-colnames(df)<-(c("BIAC","BIIL","BITRO","CHEST1","CHEST2","ELBOW","WRIST", "KNEE","ANKLE","SHOUL","CHESTG",
-                 "WAISTG","NAVEL","HIP","GLUTE","BICEP", "FLOREA","KNEEG","CALF","ANKLEG","WRISTG","AGE",
-                 "WEIG","HEIG","GEN"))
-any(is.na(df))
+colnames(df)<-(c("BIAC","BIIL","BITRO","CHEST1","CHEST2","ELBOW","WRIST", "KNEE","ANKLE","SHOUL","CHESTG","WAISTG","NAVEL","HIP","GLUTE","BICEP", "FLOREA","KNEEG","CALF","ANKLEG","WRISTG","AGE","WEIG","HEIG","GEN"))
+head(df)
+```
 
-df %>% group_by(GEN) %>% summarise(median(WEIG)) -> medianas
+```{r}
+colSums(is.na(df))
+```
 
-df %>% filter(GEN == 0) %>% select(WEIG) -> weig_0
-df %>% filter(GEN == 1) %>% select(WEIG) -> weig_1
+No hay NAs en ninguna columna de `df` .
 
-weig_0 <- as.vector(weig_0$WEIG)
-weig_1 <- as.vector(weig_1$WEIG)
+### (b)
 
+Agarramos los WEIG según GEN y guardamos en `weig_0` y `weig_1`, exploramos.
+
+```{r}
+df$GEN <- as.factor(df$GEN)
+df %>% group_by(GEN) -> df_GEN
+```
+
+Boxploteamos WEIG según GEN.
+
+```{r}
+df %>% ggplot(aes(GEN, WEIG)) + geom_boxplot()
+```
+
+
+
+```{r}
+df_GEN %>%
+  summarise(WEIGHT = mean(WEIG), s = sd(WEIG)) %>%
+  ggplot(aes(GEN, WEIGHT, s, ymin = WEIGHT-s, ymax = WEIGHT+s)) + geom_pointrange() + labs(title = "Intervalos de confianza usando TCL", subtitle = "nivel = 0.95")
+```
+
+
+```{r}
 B = 5000
 
 estmed_0 <- replicate(B, median(sample(weig_0, length(weig_0), replace = TRUE)))
 sdHat_0 <- sqrt(mean((estmed_0 - mean(estmed_0))^2))
 
-
 estmed_1 <- replicate(B, median(sample(weig_1, length(weig_1), replace = TRUE)))
 sdHat_1 <- sqrt(mean((estmed_1 - mean(estmed_1))^2))
 
-### Intervalos de confianza para la mediana 0 y 1, usando el TCL, de nivel 0.95
-
-intervalo1_boot_0 <- c(median(weig_0) - 1.96*sdHat_0, median(weig_0) + 1.96*sdHat_0)
-intervalo1_boot_1 <- c(median(weig_1) - 1.96*sdHat_1, median(weig_1) + 1.96*sdHat_1)
-
 ### Intervalos de confianza para la mediana 0 y 1, usando el metodo bootstrap percentil, de nievl 0.95
-
 intervalo2_boot_0 <- c(quantile(estmed_0, 0.025), quantile(estmed_0, 0.975))
 intervalo2_boot_1 <- c(quantile(estmed_1, 0.025), quantile(estmed_1, 0.975))
-
-### Grafico posible para el 2
-
-colores <- c('red', 'blue')
-plot(df$HEIG,df$WEIG, col = colores[as.factor(df$GEN)], pch = 16)
 ```
+
+```{r}
+bootstrap = function(x, estad = median, n = 50, s = FALSE) {
+  if (!s) {
+    s = length(x)
+  }
+  return(replicate(x, estad(sample(x, s), replace = TRUE)))
+}
+```
+
+```{r}
+B = 5000
+df_GEN %>% 
+  summarise(WEIGHT = mean(WEIG), a = quantile(bootstrap(WEIG, n = 500), 0.025), b = quantile(bootstrap(WEIG, n = 5000), 0.975))
+```
+
+
