--- a/clases/TPFAlvarezFreireSolar.Rmd
+++ b/clases/TPFAlvarezFreireSolar.Rmd
@@ -48,38 +48,48 @@ df %>% ggplot(aes(GEN, WEIG)) + geom_boxplot()
 
 ```{r}
 df_GEN %>%
-  summarise(WEIGHT = mean(WEIG), s = sd(WEIG)) %>%
-  ggplot(aes(GEN, WEIGHT, s, ymin = WEIGHT-s, ymax = WEIGHT+s)) + geom_pointrange() + labs(title = "Intervalos de confianza usando TCL", subtitle = "nivel = 0.95")
+  summarise(WEIGHT = median(WEIG), s = sd(WEIG)) %>%
+  ggplot(aes(GEN, WEIGHT, s, ymin = WEIGHT-s, ymax = WEIGHT+s)) + geom_linerange() + geom_point(aes(fill = "mediana")) + labs(title = "Intervalos de confianza usando TCL", subtitle = "nivel = 0.95") + scale_fill_discrete(name = "")
 ```
 
+Implementamos un bootstrap no-paramétrico
 
 ```{r}
-B = 5000
-
-estmed_0 <- replicate(B, median(sample(weig_0, length(weig_0), replace = TRUE)))
-sdHat_0 <- sqrt(mean((estmed_0 - mean(estmed_0))^2))
-
-estmed_1 <- replicate(B, median(sample(weig_1, length(weig_1), replace = TRUE)))
-sdHat_1 <- sqrt(mean((estmed_1 - mean(estmed_1))^2))
-
-### Intervalos de confianza para la mediana 0 y 1, usando el metodo bootstrap percentil, de nievl 0.95
-intervalo2_boot_0 <- c(quantile(estmed_0, 0.025), quantile(estmed_0, 0.975))
-intervalo2_boot_1 <- c(quantile(estmed_1, 0.025), quantile(estmed_1, 0.975))
-```
-
-```{r}
-bootstrap = function(x, estad = median, n = 50, s = FALSE) {
+bootstrap = function(n, x, estad = median, s = FALSE) {
   if (!s) {
     s = length(x)
   }
-  return(replicate(x, estad(sample(x, s), replace = TRUE)))
+  return(replicate(n, estad(sample(x, s, replace = TRUE))))
 }
 ```
+
+Bootstrapeamos y graficamos los intervalos:
 
 ```{r}
 B = 5000
 df_GEN %>% 
-  summarise(WEIGHT = mean(WEIG), a = quantile(bootstrap(WEIG, n = 500), 0.025), b = quantile(bootstrap(WEIG, n = 5000), 0.975))
+  summarise(WEIGHT = median(WEIG), a = quantile(bootstrap(B, WEIG, median), 0.025), b = quantile(bootstrap(B, WEIG, median), 0.975)) %>%
+  ggplot(aes(GEN, WEIGHT, ymin = a, ymax = b)) + geom_linerange() + geom_point(aes(fill = "mediana")) + labs(title = "Intervalos de confianza bootstrapeados", subtitle = "percentil = 0.95") + scale_fill_discrete(name = "")
+```
+
+### (c)
+
+```{r}
+df_GEN %>% ggplot(aes(WEIG, HEIG)) + geom_point(aes(color = GEN))
+```
+
+### (d)
+
+Ajustamos la regresión no paramétrica para cada GEN usando ksmooth.
+
+```{r}
+df_GEN %>% do(ksmooth(x = .$WEIG, y = .$HEIG, bandwidth = 10, kernel = "normal") %>% as.data.frame()) -> regnopar
+head(regnopar)
+```
+
+```{r}
+df_GEN %>%
+  ggplot(aes(WEIG, HEIG)) + geom_point(aes(color = GEN), alpha = 0.2) + geom_line(data = regnopar, aes(x, y, color = GEN)) + labs(title = "Regresión Nadaraya-Watson", subtitle = "bandwidth = 10")
 ```
 
 
